# hnix-web-repl

./: .gitignore  LICENSE  README.md  build.sh  cabal.project  default.nix  hnix-web-repl.cabal
app/: index.html
app/css/: site.css
src/: Examples.hs  History.hs  Main.hs  NixRepl.hs
